asset/imcomp/imcomp.css
/*
////////////////////////////////////////////////////////////////////////////////
//
// @file        imcomp.css
// @description Image comparator user interface styles
// @author      Abhishek Dutta <adutta@robots.ox.ac.uk>
// @date        09 May 2018
//
////////////////////////////////////////////////////////////////////////////////
*/

body {
  font-family: "Roboto", Helvetica, Arial, sans-serif; font-size: medium;
  margin: 0;
  padding: 0;
  border: 0;
  background-color: #ffffff;
  color: #000000;
}
* {
  box-sizing: border-box;
}
.display-none {
  display: none;
}
.display-inline-block {
  display: inline-block;
}
.imcomp_container {
  position:relative;
  display:grid;
  grid-template-rows: auto auto auto auto 1fr;
  grid-row-gap:0.5em;
  padding: 0.3em;
  background-color:#ffffff;
  height:90vh;
  max-height:90vh;
  width:99vw;
}
.imcomp_border {
  border: 1px solid #673AB7;
}
.top {
  display:block;
  text-align:center;
  margin:1rem 0;
}
.top button {
  border: none;
  outline: none;
  padding: 10px 16px;
  cursor: pointer;
  margin:0.4rem 1rem;
  border-radius:0.6rem;
  width: 16rem;
}
.top button:focus {
    outline:none;
}
.top button:hover {
}
.top button:active {
    outline:none;
    color:#808080;
}

.instructions {
  display: flex;
  /* margin: 0.5rem 0.5rem 0.5rem 0.5rem; */
  margin-top: 0.5rem;
  height: 1.6rem;
  text-align: center;
  border: 1px;
  width: 100%;
  border: 1px solid #673AB7;
}
.instruction_step1 {
  /* background-color: #fcf7ab; */
  background-color: #cccccc;
  width: 35%;
  font-size: larger;
  cursor: pointer;
}
.instruction_step2 {
  /* background-color: #fcf7ab; */
  background-color: #cccccc;
  width: 35%;
  font-size: larger;
  cursor: pointer;
}
.instruction_step3 {
  /* background-color: #fcf7ab; */
  background-color: #cccccc;
  width: 35%;
  font-size: larger;
  cursor: pointer;
}
.instruction_active {
  background-color:#000000;
  color: white;
}

.right_arrow {
  margin-top: 0.2em;
  width: 5%;
  color: #673AB7;
  font-weight: bolder;
}
.step1_button_color {
    background-color:#673AB7;
    color:white;
}
.step2_button_color {
    background-color:#FFC107;
    color:black;
}
.step3_button_color {
    background-color:#673AB7;
    color:black;
}
.stepn_button_deactivate {
    opacity:0.4 !important;
}

.stepn_button_activate {
    opacity:1.0 !important;
}

.panel_content {
  /* margin:0.5rem 0.5rem; */
  /* padding: 0.2rem; */
  display:none;
  /* border:1px solid #cccccc; */
}
.bottom {
  display:block;
  text-align:center;
  padding:0rem 1rem;
  font-size:0.8rem;
}

.banner {
  text-align: center;
  object-fit: cover;
}
.banner img {
  /* object-fit: cover; */
  width: 100%;
}

/* top panel for branding and global settings */
.top_panel {
  background-color: #673AB7;
  padding:0.4em 0.5em;
}
.top_panel * { vertical-align: middle; }

.top_left_logo {
  font-size: 1.3em;
  display: inline;
  color:white;
}
.top_left_logo a {
  text-decoration: none;
  color:white;
}
.compare_panel {
  display:inline;
  margin-left: 1em;
}
.compare_panel button {
  border:none;
  border-radius:0.5em;
  background-color:white;
  color:#673AB7;
  width:16em;
  font-size:1.4em;
}
/* toolbar  icons on top */
.toolbar {
  display:inline !important;
  margin-top:0.2em;
}
.toolbar div {
  display:inline;
}
.toolbar svg {
  fill:black;
  height:1.6rem;
  -moz-user-select:none;
  -webkit-user-select:none;
  -ms-user-select:none;
}
.toolbar svg:hover {
  fill:yellow;
  cursor:pointer;
}
.toolbar svg:active {
  fill:blue;
}

#trnasformation_select {
  font-size: larger;
  width: 16rem;
  margin-left: 20em;
  background-color: white;
  color: #673AB7;
  border-radius: 0.5em;
}

.top_left {
  width: 40%;
  height: 8rem;
  float: right;
}
.top_right {
  display:inline-block !important;
}

#step1_panel {
  margin-top: 0.5rem;
  text-align: center;
  /* height: 30rem; */
  font-size: larger;
  color: #673AB7;
  border: 1px solid;
}

.step1_text {
  padding: 11rem;
  height: 100%;
}
#step1_panel button {
  border-radius: 20px;
  border-color: #673AB7;
  width: 8rem;
  height: 2.5rem;
  background-color: #673AB7;
  color: white;
  cursor: pointer;
  font-size: 22px;
}
.step1_panel_note {
  font-size: small;
}

#step3_panel .control_panel {
  display:none;
  /* display: flex; */
  padding-bottom:1rem;
}

#step3_panel .control_panel .space {
  margin-left:2rem;
}
.sample_images_div {
  height: 10rem;
  border: 1px solid #673AB7;
  display: flex;
  text-align: center;
  width: 100%;
  padding: 4px;
  overflow-y: hidden;
  overflow-x: auto;
}
.sample_images_div_row {
  display: table;
}
.demo_space {
  width: 16rem;
  overflowX: scroll;
}
.sample_images_set {
  cursor: pointer;
  display: table-cell;
  border-spacing: 5px;
}
.sample_images_set img {
  display:block;
  user-drag: none;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -ms-user-select: none;
}

#results_tabs_panel {
  margin-top: 0.5rem;
}
.results_tab {
  padding:5px;
  display: inline-block;
  font-size: large;
  border-top: 3px solid #9E9E9E;
  border-right: 1px solid #9E9E9E;
  border-left: 1px solid #9E9E9E;
  cursor: pointer;
}

.results_tab.active {
  /* border-top: 3px solid #673AB7; */
  color: white;
  background-color: #673AB7;
}

#results_save_panel {
  width: 100%;
  height: 4rem;
  text-align: center;
  padding: 1.2rem;
}

#results_save_panel button {
  border-radius: 20px;
  background-color: #673AB7;
  border-color: #673AB7;
  color: white;
  width: 7rem;
  height: 2.5rem;
  font-size: 18px;
  cursor: pointer;
  justify-content: center;
}

#files_panel {
  display: block;
  padding: 0.5rem;
  width: 100%;
  height: auto;
  max-height: 200px;
  overflow: auto;
  scroll: auto;
  /* border: 1px solid #cccccc; */
  border: 1px solid #673AB7;
}
#files_panel img {
  height: 80px;
  margin:0 1em;
}
.files_panel_header {
  width: 100%;
  height: 1.8rem;
  padding: 0.4rem;
  /* background-color: #9bd7ef; */
}
/* ... */

